--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-        <h1>Here we're going to do a blog post to understand git</h1>
-        <p>This is the initial paragraph to improve my skills for git</p>
+        <div id="container">
+            <div id="post">
+                <h1>Here we're going to do a blog post to understand git</h1>
+                <p>This is the initial paragraph to improve my skills for git</p>
+            </div>   
+        </div>
     </body>
 </html>
