--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Here we're going to do a blog post to understand git</h1>
                 <p>This is the initial paragraph to improve my skills for git</p>
