--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog 
+                <span id="tagline">your blog that you can believe</span>
             </div>
             <div id="post">
                 <h1>Here we're going to do a blog post to understand git</h1>
