--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Here we're going to do a blog post to understand git</h1>
                 <p>This is the initial paragraph to improve my skills for git</p>
+                <p>To continue with this adventure we can dive in the program skills</p>
             </div>   
         </div>
     </body>
