--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
                 <h1>Here we're going to do a blog post to understand git</h1>
                 <p>This is the initial paragraph to improve my skills for git</p>
                 <p>To continue with this adventure we can dive in the program skills</p>
-                <p>I'm so elated about my Australian visa.</p>
+                <p>I'm so elated about my Australian visa and I'm going to grow with my wife.</p>
             </div>   
         </div>
     </body>
